<resources>
    <string name="app_name">IPSC Scorer</string>
    <string name="action_settings">Settings</string>
    <string name="score_pt">PT</string>
    <string name="score_prc">PR</string>
    <string name="score_dq">DQ</string>
    <string name="score_time_0000">00:00.00</string>
    <string name="score_a">A</string>
    <string name="score_b">B</string>
    <string name="score_c">C</string>
    <string name="score_d">D</string>
    <string name="score_m">M</string>
    <string name="pref_steel_targets_label">Steel targets</string>
    <string name="pref_steel_targets_key">steel_targets</string>
    <string name="pref_steel_targets_default">1</string>
    <string name="pref_steel_targets_hint">Number of steel targets</string>
    <string name="pref_paper_targets_label">Paper targets</string>
    <string name="pref_paper_targets_key">paper_targets</string>
    <string name="pref_paper_targets_default">1</string>
    <string name="pref_paper_targets_hint">Number of paper targets</string>
    <string name="pref_parcours_label">Parcours name</string>
    <string name="pref_parcours_key">parcours</string>
    <string name="pref_parcours_default">Parcours 1</string>
    <string name="pref_parcours_hint">Name of the parcours</string>
    <string name="title_activity_settings">Settings</string>
    <string name="action_build_targets">Build targets</string>
    <string name="action_clear_target_scores">Clear target scores</string>
    <string name="no_targets_built">No targets have been built.</string>
    <string name="use_settings_for_buildTargets">Please, use Settings to set number of targets!</string>
    <string name="action_share">Share</string>
    <string name="factor_minor">Minor</string>
    <string name="factor_major">Major</string>
    <string name="title_activity_score">Score</string>
    <string name="num_shots">Shots</string>
    <string name="Time">Time</string>
    <string name="Shooter">Shooter</string>
    <string name="action_clear_score">Clear score</string>
    <string name="steel_targets">Steel targets</string>
    <string name="paper_targets">Paper targets</string>
    <string name="comment">Comment</string>
    <string name="t_target">T</string>
    <string name="shooter_s_name">Shooter\'s name</string>
    <string name="zero">0</string>
    <string name="zero_A">0 A</string>
    <string name="zero_B">0 B</string>
    <string name="zero_C">0 C</string>
    <string name="zero_D">0 D</string>
    <string name="zero_M">0 M</string>
</resources>
